--- a/1.1/Makefile
+++ b/1.1/Makefile
@@ -1,3 +1,3 @@
 all:
-	g++ -O A1.cpp -o A1 -L/usr/local/lib64 -llapack -lblas -lgfortran -lm
+	g++ -O A1.cpp -o a.out -L/usr/local/lib64 -llapack -lblas -lgfortran -lm
 
